account/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  namespace: account
  labels:
    app: account-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: annamatilda/account-service:1.0.4
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8085
            - name: mgmt
              containerPort: 8185

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
