account/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: account
  labels:
    app: postgresql
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: postgresql
