account/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: account
  labels:
    app: account-service
spec:
  selector:
    app: account-service
  ports:
    - name: http
      port: 80
      targetPort: 8085
  type: ClusterIP
